# ADSIngestParser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  aa49385-24.xml  bp.py  dev-requirements.txt  f.py  html5_converter.py  jats_aps_id_overrun.xml  out.json  out2.json  pyproject.toml  requirements.txt  run.py  setup.cfg  test.py  test2.py  woo.json  x.py
.github/workflows/: ci.yml
adsingestp/: __init__.py  cli.py  ingest_exceptions.py  parser_exceptions.py  serializer.py  utils.py
adsingestp/parsers/: adsfeedback.py  arxiv.py  base.py  bits.py  copernicus.py  crossref.py  datacite.py  dubcore.py  elsevier.py  ieee.py  jaff.py  jats.py  jats_ieee.py  jats_new.py  nj.py.WORKS  springer.py  wiley.py  wiley_tmp.pl
adsingestp/tests/: test_jats.py
adsingestp/tests/stubdata/output/: jats_apj_859_2_101.json
cleanup/: aff_analyzer.py  jats_edp_jnwpu_40_96.xml  jats_springer_ZaMP_s00033-023-02064-z.json  jats_springer_ZaMP_s00033-023-02064-z.xml  lol.xml  title_ingest_fmt.json  woot.json  wu.py  x.py  y.py  z.py
docs/: conf.py  index.md  installation.md  usage.md
tests/: test_arxiv.py  test_base.py  test_copernicus.py  test_crossref.py  test_datacite.py  test_dublincore.py  test_elsevier.py  test_ieee.py  test_jats.py  test_parserfeedback.py  test_utils.py  test_wiley.py
tests/stubdata/input/: .ieee_jats_omit_western_name_alternatives.xml.swp  ads_feedback_escape.json  arxiv_multi_20230125.xml  copernicus_ESSD_essd-15-3075-2023.xml  copernicus_GeChr_gchron-5-323-2023.xml  copernicus_ISPAn_isprs-annals-X-M-1-2023-237-2023.xml  copernicus_ISPAr_isprs-archives-XLVIII-M-2-2023-721-2023.xml  copernicus_wes-8-1625-2023.xml  crossref_10.1002_1521-3994.xml  crossref_10.1103_PhysRevD_64-117303.xml  crossref_10.1146_annurev.energy.25.1.441.xml  crossref_10.3137_a0410105.xml  crossref_10.3847_2041-8213.xml  crossref_book_10.1007-978-1-4614-3520-4.xml  crossref_book_10.1017-CBO9780511709265.xml  crossref_book_chapter_10.1016_B978-0-12-037311-6.50008-9.xml  crossref_cn_10.1051=0004-6361=202243540.xml  crossref_cn_10.1088=1475-7516=2022=10=098.xml  crossref_cn_10.1093=mnras=stac2975.xml  crossref_cn_10.1093=pasj=psac053.xml  crossref_cn_10.3847=1538-4357=ac8c2f.xml  crossref_conf_10.1049-cp.2010.1342.xml  crossref_conf_10.1109-MWSYM.2013.6697399.xml  crossref_editors_encyc_astrobio.xml  crossref_gsa_conf.xml  crossref_no_contrib_10.3367_UFNe.2022.11.039660.xml  crossref_no_contrib_10.4213_im9580e.xml  crossref_preprint_10.1002-essoar.10508651.1.xml  crossref_preprint_10.1002-essoar.10511074.2.xml  crossref_preprint_10.31223-X55K7G.xml  crossref_preprint_10.31223-X5FW25.xml  crossref_preprint_10.31223-X5WD2C.xml  datacite-metadata-sample-v2.0.xml  datacite-ornldaac-kernel2.2-0010.xml  datacite_null_valueuri.xml  datacite_schema4_example-habanero-pdsdataset.xml  dubcore_pensoft_example_1.xml  dubcore_pensoft_example_2.xml  dubcore_pensoft_variant.xml  dubcore_pos_ecrs_002.xml  (+142 more)
tests/stubdata/output/: Copernicus_ESSD_essd-15-3075-2023.json  Copernicus_GeChr_gchron-5-323-2023.json  Copernicus_ISPAn_isprs-annals-X-M-1-2023-237-2023.json  Copernicus_ISPAr_isprs-archives-XLVIII-M-2-2023-721-2023.json  arxiv_0901_2443.json  arxiv_1711_04702.json  arxiv_1711_05739.json  arxiv_math_0306266.json  arxiv_multi_20230125_header.txt  arxiv_multi_20230125_noheader.txt  copernicus_ESSD_essd-15-3075-2023.json  copernicus_GeChr_gchron-5-323-2023.json  copernicus_ISPAn_isprs-annals-X-M-1-2023-237-2023.json  copernicus_ISPAr_isprs-archives-XLVIII-M-2-2023-721-2023.json  copernicus_wes-8-1625-2023.json  crossref_10.1002_1521-3994.json  crossref_10.1103_PhysRevD_64-117303.json  crossref_10.1146_annurev.energy.25.1.441.json  crossref_10.3137_a0410105.json  crossref_10.3847_2041-8213.json  crossref_book_10.1007-978-1-4614-3520-4.json  crossref_book_10.1017-CBO9780511709265.json  crossref_book_chapter_10.1016_B978-0-12-037311-6.50008-9.json  crossref_cn_10.1051=0004-6361=202243540.json  crossref_cn_10.1088=1475-7516=2022=10=098.json  crossref_cn_10.1093=mnras=stac2975.json  crossref_cn_10.1093=pasj=psac053.json  crossref_cn_10.3847=1538-4357=ac8c2f.json  crossref_conf_10.1049-cp.2010.1342.json  crossref_conf_10.1109-MWSYM.2013.6697399.json  crossref_editors_encyc_astrobio.json  crossref_gsa_conf.json  crossref_no_contrib_10.3367_UFNe.2022.11.039660.json  crossref_no_contrib_10.4213_im9580e.json  crossref_preprint_10.1002-essoar.10508651.1.json  crossref_preprint_10.1002-essoar.10511074.2.json  crossref_preprint_10.31223-X55K7G.json  crossref_preprint_10.31223-X5FW25.json  crossref_preprint_10.31223-X5WD2C.json  datacite-metadata-sample-v2.0.json  (+151 more)
