[project]
name = "adsingestp"
version = "7.7.7"
description = "Curation parser library"
authors = [
    { name = "Kelly Lockhart", email = "kelly.lockhart@cfa.harvard.edu"},
    { name = "Mugdha Polimera", email = "mugdha.polimera@cfa.harvard.edu"},
    { name = "Matthew Templeton", email = "matthew.templeton@cfa.harvard.edu"}
]
license = { text = "MIT" }
readme = "README.md"
repository = "https://github.com/adsabs/ADSIngestParser"
documentation = "https://adsingestp.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    "adsingestp",
]

dependencies = [
    'click>=8.0.3',
    'beautifulsoup4==4.14.3',
    'lxml==6.0.2',
    'nameparser==1.1.3',
    'ordered-set==4.1.0',
    'python-dateutil==2.8.1',
    'adsingestschema @ git+https://github.com/seasidesparrow/ingest_data_model@v7.7.7',
    'validators==0.35.0',
]


[project.urls]
Source = "https://github.com/adsabs/ADSIngestParser"
Documentation = "https://adsingestp.readthedocs.io"


[project.optional-dependencies]
dev = [
    'black==25.11.0',
    'flake8==7.3.0',
    'isort==6.1.0',
    'pytest==8.4.2',
    'pyupgrade==3.21.0',
    'pytest-mock==3.15.1',
    'pre-commit==4.3.0',
    'coveralls==4.0.1',
    'mock==5.2.0',
    'coverage==7.10.7',
    'pytest-cov==7.0.0',
    'pytest-cookies==0.7.0',
    'semantic-release==0.1.0',
]
docs = [
    'Sphinx==7.2.6',
    'myst-parser==2.0.0',
    'sphinx-rtd-theme==2.0.0'
]


[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:project.version"
version_variable = "adsingestp/version.py:__version__"
build_command = "flit build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=adsingestp"
cache_dir = ".tmp/"

[tool.coverage.run]
data_file = ".tmp/.coverage"

[tool.coverage.report]
skip_empty = true
skip_covered = true

[tool.isort]
profile = "black"
known_first_party = ["adsingestp", "tests"]

[tool.black]
line-length = 99 # override black's default line-length

[build-system]
requires = ["setuptools==60.10.0", "wheel", "flit_core >=3.2,<4", "ppsetuptools==2.0.2"]
build-backend = "flit_core.buildapi"
#build-backend = "setuptools.build_meta"

# see setup.py for explanation of these
[xsetup.entry_points]
console_scripts = [
    "adsingestp=adsingestp.cli:cli",
]
[xsetup]
scripts = [
]
